--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Expert System
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:EPgDF0cvcdYCFOY3iIzxv+v+IxKmPI9a2vqCegGO2fM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=expert_system
 DB_USERNAME=root
 DB_PASSWORD=
 
